package com.backbase.api.common.request;

public enum BackendRequestStatus {
  REQUEST_CREATED,
  REQUEST_INPROGRESS,
  REQUEST_WAITING,
  REQUEST_CANCELED,
  REQUEST_ABORTED,
  REQUEST_FAILED,
  REQUEST_COMPLETED;
}
