package com.backbase.api.data;

public interface BackbaseData {
}
