@startuml

interface BackbaseData

class BackendRequest {
  - final String id;
  - final BackendData requestData;
  - BackendData responseData;
  - final LocalDateTime createdAt;
  - BackendRequestStatus status;
  - LocalDateTime startedAt;
  - LocalDateTime finishedAt;
  - boolean requestStartedFlag;
  - ArrayList<BackendRequest> requests = new ArrayList<BackendRequest>();
  - static final LocalDateTime INVALID_TIME = LocalDateTime.MAX;
}

enum BackendRequestStatus {
  REQUEST_CREATED,
  REQUEST_INPROGRESS,
  REQUEST_WAITING,
  REQUEST_CANCELED,
  REQUEST_ABORTED,
  REQUEST_FAILED,
  REQUEST_COMPLETED;
}

class AclRequest {
  EnumAclRequestType requestType;
}

enum EnumAclRequestType  {
  ACL_REQUEST_GET_ACCOUNT,
  ACL_REQUEST_UPDATE_ACCOUNT,
  ACL_REQUEST_CREATE_ACCOUNT,
  ACL_REQUEST_DELETE_ACCOUNT,
  ACL_REQUEST_GET_TRANSACTION,
  ACL_REQUEST_CREATE_TRANSACTION,
}


BackendRequest <|-- StateMachineRequest
StateMachineRequest <|-- AclRequest
AclRequest *-- EnumAclRequestType
BackendRequest *-- BackendData

class BackendAccountNumberPayload  {
  private String accountNumber;
}

class BackendAccountPayload {
  private AccountInfo accountInfo;
}

class BackendCreateAccountPayload {
    private AccountCreationInput accountCreationInput;
}

class BackendUpdateAccountPayload  {
  private String accountNumber;
  private AccountUpdateInput accountUpdateInput;
}

class BackendCreateTransactionPayload  {
  private String accountNumber;
  private TransactionCreationInput transactionInput;
}


class BackendTransactionPayload  {
    private TransactionInfoCollection transactionInfoCollection;
}


BackbaseData <|-- BackendData
BackendData <|-- BackendAccountNumberPayload
BackendData <|-- BackendCreateAccountPayload
BackendData <|-- BackendUpdateAccountPayload
BackendData <|-- BackendCreateTransactionPayload
BackendData <|-- BackendTransactionPayload


@enduml